--- a/hotel.html
+++ b/hotel.html
@@ -8,7 +8,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
-        <img src="img/index-logo.svg" width="368" height="153"
+        <img src="img/logo-sedona.svg" width="140" height="71"
           alt="Логотип тур-агенства Седонна">
       </a>
       <ul class="site-navigation">
@@ -42,15 +42,27 @@
     <p>Сортировать:</p>
     <ul class="catalog-navigation">
       <li class="catalog-navigation__item"><a>По цене</a></li>
-      <li><a href="type_of.html">По типу</a></li>
-      <li><a href="rated.html">По рейтингу</a></li>
+      <li>
+        <a href="type_of.html">По типу</a>
+      </li>
+      <li>
+        <a href="rated.html">По рейтингу</a>
     </ul>
+    <div class="arrows">
+      <span>
+        <img src="img/icon-up-dir.svg" alt=Вверх>
+      </span>
+      <span>
+        <img src="img/icon-down-dir.svg" alt="Вниз">
+      </span>
+    </div>
     <section class="hotels">
       <h2>Каталог</h2>
       <ul class="hotels__list">
         <li class="hotels__item">
           <div class="hotels__image">
-            <img src="http://placehold.it/150x100" alt="">
+            <img src="img/hotel-picture1.jpg" width="135" height="90"
+            alt="Amara Resort & Spa">
           </div>
           <div class="hotels__info">
             <a class="hotels__title" href="#">Amara Resort & Spa</a>
@@ -64,13 +76,16 @@
             </div>
           </div>
           <div class="hotels__rate">
-            <span class="hotels__rate-star">звезды</span>
+            <span class="hotels__rate-star">
+              <img src="img/star.svg" alt="звезды">
+            </span>
             <p class="hotels__rate-text">Рейтинг: 8,5</p>
           </div>
         </li>
         <li class="hotels__item">
           <div class="hotels__image">
-            <img src="http://placehold.it/150x100" alt="">
+            <img src="img/hotel-picture2.png" width="135" height="90"
+            alt="Desert Quail inn">
           </div>
           <div class="hotels__info">
             <a class="hotels__title" href="#">Desert Quail inn</a>
@@ -84,13 +99,15 @@
             </div>
           </div>
           <div class="hotels__rate">
-            <span class="hotels__rate-star">звезды</span>
+            <span class="hotels__rate-star">
+              <img src="img/star.svg" alt="звезды">
+            </span>
             <p class="hotels__rate-text">Рейтинг: 8,9</p>
           </div>
         </li>
         <li class="hotels__item">
           <div class="hotels__image">
-            <img src="http://placehold.it/150x100" alt="">
+            <img src="img/hotel-picture3.png" alt="Villas At Poco Diabolo">
           </div>
 
           <div class="hotels__info">
@@ -106,7 +123,9 @@
           </div>
 
           <div class="hotels__rate">
-            <span class="hotels__rate-star">звезды</span>
+            <span class="hotels__rate-star">
+              <img src="img/star.svg" alt="звезды">
+            </span>
             <p class="hotels__rate-text">Рейтинг: 9,2</p>
           </div>
         </li>
@@ -116,13 +135,26 @@
   <footer class="main-footer">
     <p class="main-footer-tag">#VISITSEDONA</p>
     <ul class="footer-social">
-      <li><a href="#" class="social-button">Вконтакте</a></li>
-      <li><a href="#" class="social-button">Фейсбук</a></li>
-      <li><a href="#" class="social-button">Инстаграм</a></li>
+      <li>
+        <a href="#" class="social-button">
+          <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер
+        </a>
+      </li>
+      <li>
+        <a href="#" class="social-button">
+          <img src="img/fb-icon.svg" width="46" height="48" alt="Фейсбук">Фейсбук
+        </a>
+      </li>
+      <li>
+        <a href="#" class="social-button">
+          <img src="img/youtube.svg" width="46" height="48" alt="Ютуб">Ютуб</a>
+      </li>
     </ul>
     <p class="footer-copyright">
       <b>website by</b>
-      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">HTML Academy
+      </a>
     </p>
   </footer>
 </body>
