--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
-        <img src="img/index-logo.svg" width="368" height="153" alt="Логотип тур-агенства Седонна">
+        <img src="img/logo-sedona.svg" width="140" height="71"
+          alt="Логотип тур-агенства Седонна">
       </a>
       <ul class="site-navigation">
         <li><a href="#">Информация</a></li>
@@ -19,14 +20,18 @@
     </nav>
   </header>
   <main>
+    <section class="legend">
+      <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать">
+      <img src="img/intro-mask.svg" width="1201" height="59" alt="Маска">
+    </section>
     <section class="feature">
       <p class="headline">Седонна - небольшой городок в Аризоне,
-      заслуживающий большего!</p>
+        заслуживающий большего!</p>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
     </section>
     <section class="main-city">
       <div class="main-photo">
-        <img src="http://placehold.it/150x100" alt="">
+        <img src="img/feature-picture.png" width="800" height="256" alt="Отель">
       </div>
       <div class="main-sign">
         <h3>Настоящий
@@ -38,17 +43,20 @@
     <section class="features">
       <ul>
         <li class="feature-home">
-          <h3>жильё</h3>
+          <img src="img/icon-1.svg" width="75" height="72" alt="Жильё">
+          <h3>Жильё</h3>
           <p>Рекомендуем пожить в настоящем мотеле,
             всё как в кино!</p>
         </li>
         <li class="feature-food">
-          <h3>еда</h3>
+          <img src="img/icon-3.svg" width="74" height="70" alt="Еда">
+          <h3>Еда</h3>
           <p>Всегда заказывайте фирменный бургер,
             вы не разочаруетесь!</p>
         </li>
         <li class="feature-souvenir">
-          <h3>сувениры</h3>
+          <img src="img/icon-2.svg" width="64" height="76" alt="Сувениры">
+          <h3>Сувениры</h3>
           <p>Нетолько китайского, но и местного
             производства!</p>
         </li>
@@ -56,7 +64,7 @@
     </section>
     <section class="main-city">
       <div class="main-photo">
-        <img src="http://placehold.it/150x100" alt="">
+        <img src="img/layer-5.png" width="800" height="256" alt="Каньон">
       </div>
       <div class="main-sign">
         <h3>Там есть<br>
@@ -79,7 +87,7 @@
           <p>-№4-</p>
           <p>Ехать в седонну из лас-вегаса совсем
             не скучно</p>
-          </li>
+        </li>
         <li>
           <h3>Мало туристов</h3>
           <p>-№5-</p>
@@ -98,9 +106,20 @@
   <footer class="main-footer">
     <p class="main-footer-tag">#VISITSEDONA</p>
     <ul class="footer-social">
-      <li><a href="#" class="social-button">Вконтакте</a></li>
-      <li><a href="#" class="social-button">Фейсбук</a></li>
-      <li><a href="#" class="social-button">Инстаграм</a></li>
+      <li>
+        <a href="#" class="social-button">
+          <img src="img/twitter.svg" alt="Твиттер">Твиттер
+        </a>
+      </li>
+      <li>
+        <a href="#" class="social-button">
+          <img src="img/fb-icon.svg" alt="Фейсбук">Фейсбук
+        </a>
+      </li>
+      <li>
+        <a href="#" class="social-button">
+          <img src="img/youtube.svg" alt="Ютуб">Ютуб</a>
+      </li>
     </ul>
     <p class="footer-copyright">
       <b>website by</b>
