--- a/hotel.html
+++ b/hotel.html
@@ -12,10 +12,18 @@
           alt="Логотип тур-агенства Седонна">
       </a>
       <ul class="site-navigation">
-        <li><a href="info.html">Информация</a></li>
-        <li><a href="PhotoandVideo.html">Фото и Видео</a></li>
-        <li><a href="Statemap.html">Карта штата</a></li>
-        <li><a>Гостиницы</a></li>
+        <li>
+          <a href="info.html">Информация</a>
+        </li>
+        <li>
+          <a href="PhotoandVideo.html">Фото и Видео</a>
+        </li>
+        <li>
+          <a href="Statemap.html">Карта штата</a>
+        </li>
+        <li>
+          <a>Гостиницы</a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -49,14 +57,6 @@
         <a href="rated.html">По рейтингу</a>
       </li>
     </ul>
-    <div class="arrows">
-      <span>
-        <img src="img/icon-up-dir.svg" alt=Вверх>
-      </span>
-      <span>
-        <img src="img/icon-down-dir.svg" alt="Вниз">
-      </span>
-    </div>
     <section class="hotels">
       <h2>Каталог</h2>
       <ul class="hotels__list">
@@ -78,7 +78,6 @@
           </div>
           <div class="hotels__rate">
             <span class="hotels__rate-star">
-              <img src="img/star.svg" alt="звезды">
             </span>
             <p class="hotels__rate-text">Рейтинг: 8,5</p>
           </div>
@@ -101,7 +100,6 @@
           </div>
           <div class="hotels__rate">
             <span class="hotels__rate-star">
-              <img src="img/star.svg" alt="звезды">
             </span>
             <p class="hotels__rate-text">Рейтинг: 8,9</p>
           </div>
@@ -123,7 +121,6 @@
           </div>
           <div class="hotels__rate">
             <span class="hotels__rate-star">
-              <img src="img/star.svg" alt="звезды">
             </span>
             <p class="hotels__rate-text">Рейтинг: 9,2</p>
           </div>
@@ -136,13 +133,11 @@
     <ul class="footer-social">
       <li>
         <a href="#" class="social-button">
-          <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер
-        </a>
+          <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер</a>
       </li>
       <li>
         <a href="#" class="social-button">
-          <img src="img/fb-icon.svg" width="46" height="48" alt="Фейсбук">Фейсбук
-        </a>
+          <img src="img/fb-icon.svg" width="46" height="48" alt="Фейсбук">Фейсбук</a>
       </li>
       <li>
         <a href="#" class="social-button">
