--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
           alt="Логотип тур-агенства Седонна">
       </a>
       <ul class="site-navigation">
-        <li><a href="#">Информация</a></li>
-        <li><a href="#">Фото и Видео</a></li>
-        <li><a href="Statemap.html">Карта штата</a></li>
-        <li><a href="hotel.html">Гостиницы</a></li>
+        <li>
+          <a href="#">Информация</a>
+        </li>
+        <li>
+          <a href="#">Фото и Видео</a>
+        </li>
+        <li>
+          <a href="Statemap.html">Карта штата</a>
+        </li>
+        <li>
+          <a href="hotel.html">Гостиницы</a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -105,13 +113,11 @@
     <ul class="footer-social">
       <li>
         <a href="#" class="social-button">
-          <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер
-        </a>
+          <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер</a>
       </li>
       <li>
         <a href="#" class="social-button">
-          <img src="img/fb-icon.svg" width="46" height="48" alt="Фейсбук">Фейсбук
-        </a>
+          <img src="img/fb-icon.svg" width="46" height="48" alt="Фейсбук">Фейсбук</a>
       </li>
       <li>
         <a href="#" class="social-button">
