--- a/hotel.html
+++ b/hotel.html
@@ -8,8 +8,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
-        <img src="img/logo-sedona.svg" width="140" height="71"
-          alt="Логотип тур-агенства Седонна">
+        <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
       </a>
       <ul class="site-navigation">
         <li>
@@ -62,8 +61,7 @@
       <ul class="hotels__list">
         <li class="hotels__item">
           <div class="hotels__image">
-            <img src="img/hotel-picture1.jpg" width="135" height="90"
-            alt="Amara Resort & Spa">
+            <img src="img/hotel-picture1.jpg" width="135" height="90" alt="Amara Resort & Spa">
           </div>
           <div class="hotels__info">
             <a class="hotels__title" href="#">Amara Resort & Spa</a>
@@ -88,8 +86,7 @@
         </li>
         <li class="hotels__item">
           <div class="hotels__image">
-            <img src="img/hotel-picture2.png" width="135" height="90"
-            alt="Desert Quail inn">
+            <img src="img/hotel-picture2.png" width="135" height="90" alt="Desert Quail inn">
           </div>
           <div class="hotels__info">
             <a class="hotels__title" href="#">Desert Quail inn</a>
