--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
-        <img src="img/logo-sedona.svg" width="140" height="71"
-          alt="Логотип тур-агенства Седонна">
+        <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
       </a>
       <ul class="site-navigation">
         <li>
@@ -28,10 +27,9 @@
     </nav>
   </header>
   <main>
-      <section class="legend">
-        <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать">
-
-      </section>
+    <section class="legend">
+      <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать">
+    </section>
     <section class="feature">
       <p class="headline">Седонна - небольшой городок в Аризоне,
         заслуживающий большего!</p>
@@ -106,33 +104,33 @@
       <p class="map__title">Заинтересовались?</p>
       <p class="map__desc">Укажите предпологаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в седоне</p>
-        <form action="" class="map__form" method="GET">
-          <p class="map__item">
-            <label for="arrival__date">
-              Дата заезда:
-              <input id="arrival__date" type="text" name="date" value="" placeholder="24 апреля 2017">
-            </label>
-          </p>
-          <p class="map__item">
-            <label for="departure__date">
-              Дата выезда:
-              <input id="departure__date" type="text" name="date" value="" placeholder="4 июля 2017">
-            </label>
-          </p>
-          <p class="map__item">
-            <label for="grown">
-              Взрослые:
-              <input id="grown" type="text" name="number" placeholder="2">
-            </label>
-          </p>
-          <p class="map__item">
-            <label for="children">
-              Дети:
-              <input id="children" type="text" name="number" placeholder="0">
-            </label>
-          </p>
-          <button class="button" type="submit">Найти</button>
-        </form>
+      <form action="" class="map__form" method="GET">
+        <p class="map__item">
+          <label for="arrival__date">
+            Дата заезда:
+            <input id="arrival__date" type="text" name="date" value="" placeholder="24 апреля 2017">
+          </label>
+        </p>
+        <p class="map__item">
+          <label for="departure__date">
+            Дата выезда:
+            <input id="departure__date" type="text" name="date" value="" placeholder="4 июля 2017">
+          </label>
+        </p>
+        <p class="map__item">
+          <label for="grown">
+            Взрослые:
+            <input id="grown" type="text" name="number" placeholder="2">
+          </label>
+        </p>
+        <p class="map__item">
+          <label for="children">
+            Дети:
+            <input id="children" type="text" name="number" placeholder="0">
+          </label>
+        </p>
+        <button class="button" type="submit">Найт</button>
+      </form>
     </section>
   </main>
   <footer class="main-footer">
