--- a/hotel.html
+++ b/hotel.html
@@ -70,12 +70,8 @@
               <p class="hotels__price">от 4000 Р.</p>
             </div>
             <div class="hotels__buttons">
-              <a href="detail.html" class="detail">
-                <button class="hotels__button-detail" type="button">Подробнее</button>
-              </a>
-              <a href="reservation.html" class="reservation">
-                <button class="hotels__button-reserve" type="button">Забронировать</button>
-              </a>
+              <a href="detail.html" class="detail">Подробнее</a>
+              <a href="reservation.html" class="reservation">Забронировать</a>
             </div>
           </div>
           <div class="hotels__rate">
@@ -95,12 +91,8 @@
               <p class="hotels__price">от 3000 Р.</p>
             </div>
             <div class="hotels__buttons">
-              <a href="detail.html" class="detail">
-                <button class="hotels__button-detail" type="button">Подробнее</button>
-              </a>
-              <a href="reservation.html" class="reservation">
-                <button class="hotels__button-reserve" type="button">Забронировать</button>
-              </a>
+              <a href="detail.html" class="detail">Подробнее</a>
+              <a href="reservation.html" class="reservation">Забронировать</a>
             </div>
           </div>
           <div class="hotels__rate">
@@ -120,12 +112,8 @@
               <p class="hotels__price">от 2000 Р.</p>
             </div>
             <div class="hotels__buttons">
-              <a href="detail.html" class="detail">
-                <button class="hotels__button-detail" type="button">Подробнее</button>
-              </a>
-              <a href="reservation.html" class="reservation">
-                <button class="hotels__button-reserve" type="button">Забронировать</button>
-              </a>
+              <a href="detail.html" class="detail">Подробнее</a>
+              <a href="reservation.html" class="reservation">Забронировать</a>
             </div>
           </div>
           <div class="hotels__rate">
