--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             Дата заезда:
           </label>
           <input id="arrival__date" type="text" name="arrival" placeholder="24 апреля 2017">
-          <button type="button" name="number">
+          <button type="button" title="Поле для выбора">
             <img src="img/calendar.svg" alt="Календарь">
           </button>
         </p>
@@ -120,7 +120,7 @@
             Дата выезда:
           </label>
           <input id="departure__date" type="text" name="departure" placeholder="4 июля 2017">
-          <button type="button" name="number">
+          <button type="button" title="Поле для выбора">
             <img src="img/calendar.svg" alt="Календарь">
           </button>
         </p>
@@ -128,17 +128,17 @@
           <label for="grown">
             Взрослые:
           </label>
-          <button type="button" name="minus">-</button>
-          <input id="grown" type="text" name="number" placeholder="2">
-          <button type="button" name="plus">+</button>
+          <button type="button" title="Минус">-</button>
+          <input id="grown" type="text" name="grown" placeholder="2">
+          <button type="button" title="Плюс">+</button>
         </p>
         <p class="map__item">
           <label for="children">
             Дети:
           </label>
-          <button type="button" name="minus">-</button>
-          <input id="children" type="text" name="number" placeholder="0">
-          <button type="button" name="plus">+</button>
+          <button type="button" title="Минус">-</button>
+          <input id="children" type="text" name="children" placeholder="0">
+          <button type="button" title="Плюс">+</button>
         </p>
         <button class="button" type="submit">Найти</button>
       </form>
