--- a/hotel.html
+++ b/hotel.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Отели</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
@@ -12,16 +14,16 @@
       </a>
       <ul class="site-navigation">
         <li>
-          <a href="info.html">Информация</a>
+          <a href="info.html" class="gen">Информация</a>
         </li>
         <li>
-          <a href="PhotoandVideo.html">Фото и Видео</a>
+          <a href="PhotoandVideo.html" class="survey">Фото и Видео</a>
         </li>
         <li>
-          <a href="Statemap.html">Карта штата</a>
+          <a href="Statemap.html" class="card">Карта штата</a>
         </li>
         <li>
-          <a>Гостиницы</a>
+          <a class="housing">Гостиницы</a>
         </li>
       </ul>
     </nav>
