--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Главная</title>
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
@@ -12,16 +14,16 @@
       </a>
       <ul class="site-navigation">
         <li>
-          <a href="#">Информация</a>
+          <a href="#" class="gen">Информация</a>
         </li>
         <li>
-          <a href="#">Фото и Видео</a>
+          <a href="#" class="survey">Фото и Видео</a>
         </li>
         <li>
-          <a href="Statemap.html">Карта штата</a>
+          <a href="Statemap.html" class="card">Карта штата</a>
         </li>
         <li>
-          <a href="hotel.html">Гостиницы</a>
+          <a href="hotel.html" class="housing">Гостиницы</a>
         </li>
       </ul>
     </nav>
